@@ -2155,3 +2155,5 @@ BibTeX_importer=BibTeX_importer
 
 BibLaTeX_mode=BibLaTeX_mode
 Optional_fields_2=Optional_fields_2
+Please_wait=Please_wait
+Waiting_for_save_operation_to_finish=Waiting_for_save_operation_to_finish
