@@ -1,3 +1,5 @@
+    - Added check that ensures that application doesn't quit while a large save operation
+      is still in progress. Shows wait message with cancel button.
     - Added apostrophe (') as illegal character in BibTeX keys.
 2.6
     - Fixed IEEExplorer and ACM fetchers to adapt to web site changes.
